Update IEEE sentence.

--- a/index.html
+++ b/index.html
@@ -222,7 +222,8 @@
                 <p>
                     All submitted manuscripts will be peer-reviewed by the program committee members. At least one author 
                     of all the accepted paper should register and give a presentation in the conference in order for the accepted 
-                    paper to be included into the IEEE digital library. All accepted papers will be included in <strong>IEEE Xplore</strong> and indexed by <strong>EI</strong>.</p>
+                    paper to be included into the IEEE digital library. All accepted and presented papers will be published in the 
+                    <strong>IEEE ICDCS</strong> conference proceedings and included in the <strong>IEEE Xplore</strong>.</p>
                 <p>
                     <b>Download CFP at <a href="./file/CallForPaper.pdf"><i class="fa fa-file-pdf-o fa-fw" aria-hidden="true"></i></a></b> | 
                     <!-- <b>Submit a paper at <a href="https://easychair.org/conferences/?conf=hotwot2019">EasyChair <i class="fa fa-external-link fa-fw" aria-hidden="true"></i></a></b> | 
