--- a/index.html
+++ b/index.html
@@ -162,6 +162,12 @@
                     enhance performance and resiliency for the various aspects of next-generation mobile 
                     networking and computing.
                 </p>
+
+                <p class="lead">
+                    All accepted and presented papers will be published in the <strong>IEEE ICDCS</strong> 
+                    conference proceedings and included in the <strong>IEEE Xplore</strong>.
+                </p>
+
             </div>
             <div class="col-md-12">
                 <p class="lead">We invite submissions of original and unpublished works.</p>
@@ -222,8 +228,7 @@
                 <p>
                     All submitted manuscripts will be peer-reviewed by the program committee members. At least one author 
                     of all the accepted paper should register and give a presentation in the conference in order for the accepted 
-                    paper to be included into the IEEE digital library. All accepted and presented papers will be published in the 
-                    <strong>IEEE ICDCS</strong> conference proceedings and included in the <strong>IEEE Xplore</strong>.</p>
+                    paper to be included into the IEEE digital library.</p>
                 <p>
                     <b>Download CFP at <a href="./file/CallForPaper.pdf"><i class="fa fa-file-pdf-o fa-fw" aria-hidden="true"></i></a></b> | 
                     <!-- <b>Submit a paper at <a href="https://easychair.org/conferences/?conf=hotwot2019">EasyChair <i class="fa fa-external-link fa-fw" aria-hidden="true"></i></a></b> | 
