Modified CFP. Added new submission guidelines

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 
                     Submitted papers must be original and unpublished, and must not be submitted for publication elsewhere
                     concurrently.  All  paper  submissions  should  follow <a href="https://www.ieee.org/conferences/publishing/templates.html">IEEE  8.5"  x  11"  Two-Column  Format</a> .  
-                    Each submission must not exceed 8 pages including references.
+                    Each submission can have up to 6 pages (2 additional pages are allowed with extra page charges, $100 per page).
                 </p>
 
                 <p>
